@@ -1,3 +1,4 @@
+0.19.2-0 @11/05/2004 21:10:00 UTC@
 0.19.1-0 @11/04/2004 20:00:00 UTC@
 0.19.0-0 @11/04/2004 17:20:00 UTC@
 0.18.2-0 @11/04/2004 17:00:00 UTC@
