@@ -84,6 +84,7 @@ else
       plaf="$plaf -Dcom.apple.mrj.application.apple.menu.about.name=$APP_NAME"
    fi
 
-   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.security.policy="$TWEEK_BASE_DIR/share/tweek/java/java.security.policy.txt" $plaf -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek "$@"
+   arch=`uname -p`
+   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.library.path="$TWEEK_BASE_DIR/share/tweek/java/$arch" -Djava.security.policy="$TWEEK_BASE_DIR/share/tweek/java/java.security.policy.txt" $plaf -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek "$@"
    status=0
 fi
